--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>4.3.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.10.5.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
